changed cells structure in todo html-file

--- a/wireframes with HTML/html/todos.html
+++ b/wireframes with HTML/html/todos.html
@@ -14,88 +14,72 @@
     </nav>
 
     <!-- type of container would be chosen in css depends on screen size -->
-    <div class="todo-container" id="desktop">
-        <table>
-            <tr>
-                <td></td>
-                <td><div>Important</div></td>
-                <td><div>Not Important</div></td>
-            </tr>
+    <table class="todo-container" id="desktop">
+        <tr>
+            <td></td>
+            <td>Important</td>
+            <td>Not Important</td>
+        </tr>
 
-            <tr>
-                <td><div>Urgent</div></td>
-                <td>
-                    <!-- scroll-bar and fixed height of each cell would be added in css -->
-                    <div>
-                        <div>Todo1</div>
-                        <div>Todo2</div>
-                        <div>Todo3</div>
-                    </div>
-                </td>
-                <td>
-                    <div></div>
-                </td>
-            </tr>
+        <tr>
+            <td>Urgent</td>
+            <td>
+                <!-- scroll-bar and fixed height of each cell would be added in css -->
+                <div>Todo1</div>
+                <div>Todo2</div>
+                <div>Todo3</div>
+            </td>
+            <td></td>
+        </tr>
 
-            <tr>
-                <td><div>Not Urgent</div></td>
-                <td>
-                    <div></div>
-                </td>
-                <td>
-                    <div><div>Todo3</div></div>
-                </td>
-            </tr>
-        </table>
-    </div>
+        <tr>
+            <td>Not Urgent</td>
+            <td></td>
+            <td>
+                <div>Todo3</div>
+            </td>
+        </tr>
+    </table>
 
     <div class="todo-container" id="phone">
         <table>
             <tr>
-                <td><div>Important, Urgent</div></td>
+                <td>Important, Urgent</td>
             </tr>
             <tr>
                 <td>
-                    <div>
-                        <div>Todo1</div>
-                        <div>Todo2</div>
-                        <div>Todo3</div>
-                    </div>
+                    <div>Todo1</div>
+                    <div>Todo2</div>
+                    <div>Todo3</div>
                 </td>
             </tr>
         </table>
 
         <table>
             <tr>
-                <td><div>Not Important, Urgent</div></td>
+                <td>Not Important, Urgent</td>
             </tr>
             <tr>
-                <td>
-                    <div></div>
-                </td>
+                <td></td>
             </tr>
         </table>
 
         <table>
             <tr>
-                <td><div>Important, Not Urgent</div></td>
+                <td>Important, Not Urgent</td>
             </tr>
             <tr>
-                <td>
-                    <div></div>
-                </td>
+                <td></td>
             </tr>
         </table>
 
         <table>
             <tr>
-                <td><div>Not Important, Not Urgent</div></td>
+                <td>Not Important, Not Urgent</td>
             </tr>
             <tr>
                 <td>
-                    <div>
-                        <div>Todo4</div>
-                    </div>
+                    <div>Todo4</div>
                 </td>
             </tr>
         </table>
