added habits html-file. added icons on all pages

--- a/wireframes with HTML/html/todos.html
+++ b/wireframes with HTML/html/todos.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>todo's</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <nav>
+        <i class="material-icons">done_all</i>
         <a>ToDoList</a>
         <a href="#">Todo's</a>
         <a href="#">Habits</a>
@@ -25,9 +27,23 @@
             <td>Urgent</td>
             <td>
                 <!-- scroll-bar and fixed height of each cell would be added in css -->
-                <div>Todo1</div>
-                <div>Todo2</div>
-                <div>Todo3</div>
+                <div>
+                    Todo 1
+                    <a href="#"><i class="material-icons">done_outline</i></a>
+                    <a href="#"><i class="material-icons">delete</i></a>
+                </div>
+
+                <div>
+                    Todo 2
+                    <a href="#"><i class="material-icons">done_outline</i></a>
+                    <a href="#"><i class="material-icons">delete</i></a>
+                </div>
+
+                <div>
+                    Todo 3
+                    <a href="#"><i class="material-icons">done_outline</i></a>
+                    <a href="#"><i class="material-icons">delete</i></a>
+                </div>
             </td>
             <td></td>
         </tr>
@@ -36,7 +52,11 @@
             <td>Not Urgent</td>
             <td></td>
             <td>
-                <div>Todo3</div>
+                <div>
+                    Todo 4
+                    <a href="#"><i class="material-icons">done_outline</i></a>
+                    <a href="#"><i class="material-icons">delete</i></a>
+                </div>
             </td>
         </tr>
     </table>
@@ -48,9 +68,21 @@
             </tr>
             <tr>
                 <td>
-                    <div>Todo1</div>
-                    <div>Todo2</div>
-                    <div>Todo3</div>
+                    <div>
+                        Todo 1
+                        <a href="#"><i class="material-icons">done_outline</i></a>
+                        <a href="#"><i class="material-icons">delete</i></a>
+                    </div>
+                    <div>
+                        Todo 2
+                        <a href="#"><i class="material-icons">done_outline</i></a>
+                        <a href="#"><i class="material-icons">delete</i></a>
+                    </div>
+                    <div>
+                        Todo 3
+                        <a href="#"><i class="material-icons">done_outline</i></a>
+                        <a href="#"><i class="material-icons">delete</i></a>
+                    </div>
                 </td>
             </tr>
         </table>
@@ -79,7 +111,11 @@
             </tr>
             <tr>
                 <td>
-                    <div>Todo4</div>
+                    <div>
+                        Todo 4
+                        <a href="#"><i class="material-icons">done_outline</i></a>
+                        <a href="#"><i class="material-icons">delete</i></a>
+                    </div>
                 </td>
             </tr>
         </table>
