--- a/wireframes with HTML/html/login.html
+++ b/wireframes with HTML/html/login.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <nav>
+        <i class="material-icons">done_all</i>
         <a>ToDoList</a>
         <a href="#">Log in</a>
         <a href="#">Sign in</a>
