logo has been wrapped along with app name in <a>

--- a/wireframes with HTML/html/habits.html
+++ b/wireframes with HTML/html/habits.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <nav>
-        <i class="material-icons">done_all</i>
-        <a>ToDoList</a>
+        <a>
+            <i class="material-icons">done_all</i>
+            ToDoList
+        </a>
         <a href="#">Todo's</a>
         <a href="#">Habits</a>
         <a href="#">Trash</a>
