--- a/wireframes with HTML/html/login.html
+++ b/wireframes with HTML/html/login.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <nav>
-        <i class="material-icons">done_all</i>
-        <a>ToDoList</a>
+        <a>
+            <i class="material-icons">done_all</i>
+            ToDoList
+        </a>
         <a href="#">Log in</a>
         <a href="#">Sign in</a>
     </nav>
