a-tags have been replaced with button-tags where actions won't navigate user to different location

--- a/wireframes with HTML/html/trash.html
+++ b/wireframes with HTML/html/trash.html
@@ -24,15 +24,15 @@
             <tr>
                 <td>
                     Todo 4
-                    <a href="#">Back</a>
-                    <a href="#">Remove permanently</a>
+                    <button>Back</button>
+                    <button>Remove permanently</button>
                 </td>
             </tr>
             <tr>
                 <td>
                     Todo 5
-                    <a href="#">Back</a>
-                    <a href="#">Remove permanently</a>
+                    <button>Back</button>
+                    <button>Remove permanently</button>
                 </td>
             </tr>
         </table>
@@ -42,8 +42,8 @@
             <tr>
                 <td>
                     Task 4
-                    <a href="#">Back</a>
-                    <a href="#">Remove permanently</a>
+                    <button>Back</button>
+                    <button>Remove permanently</button>
                 </td>
             </tr>
         </table>
