--- a/wireframes with HTML/html/trash.html
+++ b/wireframes with HTML/html/trash.html
@@ -17,36 +17,39 @@
         <a href="#">Sign out</a>
     </nav>
 
-    <!-- container's elements would be displayed either horizontally or vertically depends on screen size -->
-    <div class="trash-container">
-        <p>Todo's</p>
-        <table>
-            <tr>
-                <td>
-                    Todo 4
-                    <button>Back</button>
-                    <button>Remove permanently</button>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Todo 5
-                    <button>Back</button>
-                    <button>Remove permanently</button>
-                </td>
-            </tr>
-        </table>
+    <main>
+        <!-- container's elements would be displayed either horizontally or vertically depends on screen size -->
+        <div class="trash-container">
+            <p>Todo's</p>
+            <table>
+                <tr>
+                    <td>
+                        Todo 4
+                        <button>Back</button>
+                        <button>Remove permanently</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Todo 5
+                        <button>Back</button>
+                        <button>Remove permanently</button>
+                    </td>
+                </tr>
+            </table>
 
-        <p>Habits</p>
-        <table>
-            <tr>
-                <td>
-                    Task 4
-                    <button>Back</button>
-                    <button>Remove permanently</button>
-                </td>
-            </tr>
-        </table>
-    </div>
+            <p>Habits</p>
+            <table>
+                <tr>
+                    <td>
+                        Task 4
+                        <button>Back</button>
+                        <button>Remove permanently</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </main>
+    
 </body>
 </html>
