header has been set as a wrapper for todo's and habit's name

--- a/wireframes with HTML/html/habits.html
+++ b/wireframes with HTML/html/habits.html
@@ -17,14 +17,16 @@
         <a href="#">Sign out</a>
     </nav>
 
-    <a href="#">Add Habit</a>
-
     <main>
+        <a href="#">Add Habit</a>
+
         <!-- container's elements would be displayed either horizontally or vertically depends on screen size -->
         <div class="habits-container">
             <div class="task">
-                Task1
+                <h2>Task 1</h2>
+
                 <div>easy</div>
+
                 <button>
                     <i class="material-icons">done_outline</i>
                 </button>
@@ -34,8 +36,10 @@
                 </button>
             </div>
             <div class="task">
-                Task2
+                <h2>Task 2</h2>
+
                 <div>hard</div>
+
                 <button>
                     <i class="material-icons">done_outline</i>
                 </button>
@@ -45,8 +49,10 @@
                 </button>
             </div>
             <div class="task">
-                Task3
+                <h2>Task 3</h2>
+
                 <div>medium</div>
+                
                 <button>
                     <i class="material-icons">done_outline</i>
                 </button>
