--- a/wireframes with HTML/html/todos.html
+++ b/wireframes with HTML/html/todos.html
@@ -31,7 +31,8 @@
                 <td>
                     <!-- scroll-bar and fixed height of each cell would be added in css -->
                     <div>
-                        Todo 1
+                        <h2>Todo 1</h2>
+
                         <button>
                             <i class="material-icons">done_outline</i>
                         </button>
@@ -42,7 +43,8 @@
                     </div>
 
                     <div>
-                        Todo 2
+                        <h2>Todo 2</h2>
+
                         <button>
                             <i class="material-icons">done_outline</i>
                         </button>
@@ -53,7 +55,8 @@
                     </div>
 
                     <div>
-                        Todo 3
+                        <h2>Todo 3</h2>
+
                         <button>
                             <i class="material-icons">done_outline</i>
                         </button>
@@ -71,7 +74,7 @@
                 <td></td>
                 <td>
                     <div>
-                        Todo 4
+                        <h2>Todo 4</h2>
                         <button>
                             <i class="material-icons">done_outline</i>
                         </button>
