--- a/wireframes with HTML/html/trash.html
+++ b/wireframes with HTML/html/trash.html
@@ -24,14 +24,14 @@
             <table>
                 <tr>
                     <td>
-                        Todo 4
+                        <h2>Todo 4</h2>
                         <button>Back</button>
                         <button>Remove permanently</button>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        Todo 5
+                        <h2>Todo 5</h2>
                         <button>Back</button>
                         <button>Remove permanently</button>
                     </td>
@@ -42,7 +42,8 @@
             <table>
                 <tr>
                     <td>
-                        Task 4
+                        <h2>Task 4</h2>
+
                         <button>Back</button>
                         <button>Remove permanently</button>
                     </td>
@@ -50,6 +51,6 @@
             </table>
         </div>
     </main>
-    
+
 </body>
 </html>
