type of inputs in login page has been set

--- a/wireframes with HTML/html/login.html
+++ b/wireframes with HTML/html/login.html
@@ -16,9 +16,9 @@
     </nav>
 
     <form method="post">
-        <input name="username">
+        <input type="text" name="username">
         <br>
-        <input name="password">
+        <input type="password" name="password">
         <br><br>
         <input type="submit" value="Log in">
     </form>
