all tables replaced with grids

--- a/wireframes with HTML/html/trash.html
+++ b/wireframes with HTML/html/trash.html
@@ -18,37 +18,23 @@
     </nav>
 
     <main>
-        <!-- container's elements would be displayed either horizontally or vertically depends on screen size -->
+
         <div class="trash-container">
-            <p>Todo's</p>
-            <table>
-                <tr>
-                    <td>
-                        <h2>Todo 4</h2>
-                        <button>Back</button>
-                        <button>Remove permanently</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h2>Todo 5</h2>
-                        <button>Back</button>
-                        <button>Remove permanently</button>
-                    </td>
-                </tr>
-            </table>
-
-            <p>Habits</p>
-            <table>
-                <tr>
-                    <td>
-                        <h2>Task 4</h2>
-
-                        <button>Back</button>
-                        <button>Remove permanently</button>
-                    </td>
-                </tr>
-            </table>
+            <div class="trash-item">
+                <h2>Todo 4</h2>
+                <button>Back</button>
+                <button>Remove permanently</button>
+            </div>
+            <div class="trash-item">
+                <h2>Todo 5</h2>
+                <button>Back</button>
+                <button>Remove permanently</button>
+            </div>
+            <div class="trash-item">
+                <h2>Task 4</h2>
+                <button>Back</button>
+                <button>Remove permanently</button>
+            </div>
         </div>
     </main>
 
