--- a/wireframes with HTML/html/login.html
+++ b/wireframes with HTML/html/login.html
@@ -16,8 +16,16 @@
     </nav>
 
     <form method="post">
-        <input type="text" name="username">
-        <input type="password" name="password">
+        <div class="username_field">
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username">
+        </div>
+
+        <div class="password_field">
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password">
+        </div>
+        
         <input type="submit" value="Log in">
     </form>
 </body>
