added app.py to open static files on phone

--- a/wireframes with HTML and CSS/html/login.html
+++ b/wireframes with HTML and CSS/html/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+    <link rel="stylesheet" href="CSS/global_style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
@@ -15,7 +16,7 @@
         <a href="#">Sign in</a>
     </nav>
 
-    <form method="post">
+    <form class="login-form" method="post">
         <div class="username_field">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username">
